# rs_status

./: Cargo.toml  README.md
src/: config.rs  main.rs  util.rs
src/components/: battery.rs  cpu.rs  datetime.rs  disk.rs  entropy.rs  hostname.rs  ip.rs  kernel_release.rs  load_avg.rs  mod.rs  netspeed.rs  ram.rs  run_command.rs  uptime.rs
