[package]
name = "rs_status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "0.12.0", features = [ "xkb" ] }
libc = "0.2"
scan_fmt = "0.2.6"
chrono = "0.4.31"
if-addrs = "0.11.0"
